# EDITools

./: ApparentResistivityPlot.cc  ApparentResistivityPlot.h  CMakeLists.txt  EDIFileReader.cc  EDIFileReader.h  ExportGOFEMDialog.cpp  ExportGOFEMDialog.h  ExportGOFEMDialog.ui  MTDataPlot.cc  MTDataPlot.h  MTStationData.cc  MTStationData.h  MTSurveyData.cc  MTSurveyData.h  MapPlot.cc  PhasePlot.cc  PhasePlot.h  PhaseTensorPlot.cc  PhaseTensorPlot.h  README.md  TipperPlot.cc  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  mtcomp.f
include/: ApparentResistivityPlot.h  EDIFileReader.h  MTDataPlot.h  MTStationData.h  MapPlot.h  PhasePlot.h  TipperPlot.h  datum.h
src/: ApparentResistivityPlot.cc  EDIFileReader.cc  MTDataPlot.cc  MTStationData.cc  MTSurveyData.cc  MapPlot.cc  PhasePlot.cc  PhaseTensorPlot.cc  TipperPlot.cc  mtcomp_interface.f90
